# linear_FEM_CUDA

./: CMakeLists.txt  README.md
cuFem/: CMakeLists.txt
cuFem/src/: cuFEM.cu  cuFEM.h
femSolver/: CMakeLists.txt
femSolver/src/: FEMSolver.cpp  FEMSolver.h
launcher/: CMakeLists.txt  main.cpp
libFem/: CMakeLists.txt
libFem/src/: libFEM.cpp  libFEM.h
mesh/test/: constrainedDOFs.txt  elements.txt  loads.txt  nodes.txt
preProcessor/: CMakeLists.txt
preProcessor/src/: preprocessor.cpp  preprocessor.h
